test/compile-errors/fun-pointer-not-found.crow
main void()
	x fun* void() = &foo
	x[]
